# Simple-OS

./: .gitignore  CMakeLists.txt  README.md  limine.conf  linker.ld
include/: display.h  framebuffer.h  heap.h  list.h  mutex.h  pmm.h  queue.h  scheduler.h  semaphore.h  spinlock.h  stdio.h  stdlib.h  string.h  terminal.h  thread.h  types.h  vector.h  vmm.h
limine/: README.md  limine  limine-bios-hdd.h  limine.c
limine/test/: e9print.c  limine.c  memory.c
src/arch/x86_64/: boot.S  boot.s
src/display/: display.h  framebuffer.c  terminal.c
src/kernel/: kernel.c  panic.c
src/libc/stdio/: getc.c  printf.c  putchar.c  puts.c  scanf.c
src/libc/stdlib/: calloc.c  free.c  malloc.c  realloc.c
src/libc/string/: memcpy.c  memset.c  strcmp.c  strcpy.c
src/libc/sync/: mutex.c  semaphore.c  spinlock.c
src/memory/: heap.c  memory.h  pmm.c  vmm.c
src/threads/: scheduler.c  threads.c  threads.h
